--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "Auth0 Lock",
   "author": "Auth0 <support@auth0.com> (http://auth0.com)",
   "license": "MIT",
-  "keywords": ["auth0", "auth", "openid", "authentication", "passwordless", "browser", "jwt"],
+  "keywords": [
+    "auth0",
+    "auth",
+    "openid",
+    "authentication",
+    "passwordless",
+    "browser",
+    "jwt"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/auth0/lock"
@@ -20,12 +28,9 @@
     "precommit": "lint-staged",
     "lint": "eslint --ext .jsx,.js src/",
     "test": "cross-env BABEL_ENV=test zuul -- test/**/*.test.js",
-    "test:browser":
-      "cross-env BABEL_ENV=test zuul --local 8080 --disable-tunnel -- test/**/*.test.js",
-    "test:cli":
-      "cross-env BABEL_ENV=test mochify --extension=.jsx --transform=babelify ./test/setup.js test/**/*.test.js",
-    "test:watch":
-      "cross-env BABEL_ENV=test mochify --watch --extension=.jsx --transform=babelify ./test/setup.js test/**/*.test.js",
+    "test:browser": "cross-env BABEL_ENV=test zuul --local 8080 --disable-tunnel -- test/**/*.test.js",
+    "test:cli": "cross-env BABEL_ENV=test mochify --extension=.jsx --transform=babelify ./test/setup.js test/**/*.test.js",
+    "test:watch": "cross-env BABEL_ENV=test mochify --watch --extension=.jsx --transform=babelify ./test/setup.js test/**/*.test.js",
     "test:jest": "jest --coverage --runInBand",
     "test:jest:watch": "jest --watch --coverage",
     "test:es-check": "es-check es5 'build/*.js'",
@@ -37,8 +42,6 @@
     "babel-core": "^6.17.0",
     "babel-eslint": "^7.2.2",
     "babel-loader": "^6.2.5",
-    "babel-plugin-stylus-compiler": "^1.4.0",
-    "babel-plugin-transform-css-import-to-string": "0.0.2",
     "babel-plugin-version-inline": "^1.0.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.24.1",
@@ -71,6 +74,8 @@
     "jsonwebtoken": "^7.3.0",
     "lint-staged": "^4.2.3",
     "mochify": "^3.3.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-rtl": "^1.3.2",
     "prettier": "^1.7.4",
     "react-test-renderer": "^15.6.2",
     "semver": "^5.3.0",
@@ -111,8 +116,13 @@
     "localPath": "build"
   },
   "jest": {
-    "modulePaths": ["<rootDir>/src/", "<rootDir>/src/__tests__"],
-    "setupFiles": ["<rootDir>/src/__tests__/setup-tests.js"],
+    "modulePaths": [
+      "<rootDir>/src/",
+      "<rootDir>/src/__tests__"
+    ],
+    "setupFiles": [
+      "<rootDir>/src/__tests__/setup-tests.js"
+    ],
     "coveragePathIgnorePatterns": [
       "/node_modules/",
       "<rootDir>/test/",
@@ -127,10 +137,18 @@
       "<rootDir>/src/__tests__/testUtils.js",
       "<rootDir>/src/__tests__/setup-tests.js"
     ],
-    "coverageReporters": ["lcov", "text-summary"]
+    "coverageReporters": [
+      "lcov",
+      "text-summary"
+    ]
   },
   "lint-staged": {
-    "*.{js,jsx}": ["npm run lint"],
-    "*.{js,jsx,json}": ["prettier --write --print-width 100 --single-quote", "git add"]
+    "*.{js,jsx}": [
+      "npm run lint"
+    ],
+    "*.{js,jsx,json}": [
+      "prettier --write --print-width 100 --single-quote",
+      "git add"
+    ]
   }
 }
