RTL support + better Hebrew translations
Notes:

1. Removal of transform-css-import-to-string and babel-plugin-stylus-compiler
is required.

TODO - create a PR that removes them (and showes that they are useless)

--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
     "lint-staged": "^4.2.3",
     "mochify": "^6.3.0",
     "node-es-module-loader": "^0.3.8",
+    "postcss-loader": "^3.0.0",
+    "postcss-rtl": "^1.3.2",
     "prettier": "^1.7.4",
     "react-test-renderer": "^15.6.2",
     "semver": "^6.2.0",
